--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: http://gwaba.github.io/
+baseurl: ""
 permalink: pretty
 markdown: rdiscount
 prose:
@@ -6,20 +6,3 @@ prose:
   siteurl: 'http://gwaba.github.io'
   relativeLinks: 'http://gwaba.github.io/links.jsonp'
   media: '_posts/media'
-  metadata:
-    _posts:
-      - name: "category"
-        field:
-          element: "hidden"
-          value: "blog"
-      - name: "layout"
-          element: "layout"
-          value: "blog"
-      - name: "Title"
-          element: "text"
-          label: "Title"
-          value: ""
-      - name: "splash"
-          element: "text"
-          label: "Splash image"
-          value: ""
